# apst_starter_kit

./: .env.example  .gitignore  LICENSE  MANIFEST.in  MIGRATION_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: demo_mock.yaml  local_openai_compatible.yaml  openai_example.yaml  smoke.yaml  vllm_local.yaml
data/prompts/: demo_prompts.json  example_prompts.json
data/results/live_quick/: apst_checkpoint_20260514_154520.json  apst_results_20260514_154520.json
docs/: local_model_servers.md
scripts/: freeze_airbench.py
src/llm_eval/: __init__.py  cli.py  config.py  metrics.py  prompts.py  report.py  results.py  starter.py
src/llm_eval/datasets/: airbench.py
src/llm_eval/experiments/: airbench.py  apst.py  checkpoint.py  compare.py
src/llm_eval/generation/: __init__.py  rate_limiter.py  sampler.py
src/llm_eval/models/: __init__.py  base.py  catalog.py  factory.py  mock_client.py  openai_client.py  pricing.py  together_client.py
src/llm_eval/scoring/: __init__.py  classifier.py  judge_prompts.py
src/llm_eval/starter_template/: README.md
src/llm_eval/starter_template/configs/: local_openai_compatible.yaml  ollama_local.yaml
src/llm_eval/starter_template/docs/: enterprise_audits.md  publishing.md
tests/: test_classifier.py  test_config.py  test_metrics.py  test_mock_client.py  test_prompts.py  test_report.py  test_sampler.py  test_starter.py
