[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apst-starter-kit"
version = "0.1.0"
description = "Local-first Accelerated Prompt Stress Testing starter kit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Keita Broadwater"}]
keywords = ["apst", "llm", "evaluation", "safety", "reliability", "ollama", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
providers = [
    "together>=1.0.0",
]
airbench = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]
all = [
    "openai>=1.0.0",
    "together>=1.0.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/keitabroadwater/apst-starter-kit"
Repository = "https://github.com/keitabroadwater/apst-starter-kit"
Issues = "https://github.com/keitabroadwater/apst-starter-kit/issues"
Documentation = "https://github.com/keitabroadwater/apst-starter-kit#readme"

[project.scripts]
apst = "llm_eval.cli:main"
llm-eval = "llm_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_eval = [
    "starter_template/*.md",
    "starter_template/.env.example",
    "starter_template/configs/*.yaml",
    "starter_template/data/prompts/*.json",
    "starter_template/docs/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
